update the color scheme and fix bugs in text alignment

--- a/src/asl/static/color.css
+++ b/src/asl/static/color.css
@@ -1,5 +1,5 @@
 :root {
-    --base-pc-color: #6A99A0;
+    --base-pc-color: #86bfc8;
     --accent-pc-color: #0B3948;
     --dark-pc-color: #363944;
     --light-pc-color: #D9DBF1;
